--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -10,6 +10,7 @@
 			const config = {
 				socketUrl: "[[${session.ws}?:'']]",	// vacío indica falso
 				apiUrl: "[[${session.ws}?@{/api/v/}:'']]",
+				rootUrl: "[[${session.ws}?@{/}:'']]",
 				csrf: {
 					name: "[[${_csrf.parameterName}]]",
 					value: "[[${_csrf.token}]]"
