--- a/src/main/resources/templates/notificaciones.html
+++ b/src/main/resources/templates/notificaciones.html
@@ -26,11 +26,11 @@
           <div class="w3-container w3-pale-blue w3-button w3-large w3-right"
             onclick="this.parentElement.style.display='none'">X</div>
           <div class="w3-container w3-pale-blue w3-row w3-center">
-            <h1 th:text="${notificacion.descripcion}">Header</h1>
+            <h1 th:text="${notificacion.descripcion}">Descripcion de la notificacion</h1>
           </div>
 
           <div class="w3-container w3-pale-blue w3-center">
-            <p th:text="${notificacion.fecha}">Lorem ipsum...</p>
+            <p th:text="${notificacion.fecha}">Aqui va la fecha</p>
           </div>
         </div>
 
@@ -42,21 +42,3 @@
 </div>
 
 </html>
-
-<!--
-<div class="w3-row w3-center">
-          <div class="w3-third w3-container w3-center w3-margin-bottom box">
-            <div class="w3-container w3-center w3-white info">
-              <input type="checkbox">
-              <p><b>Notificacion 1</b></p>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book.</p>
-            </div>
-            <div style="text-align: center">
-              <input type="button" name="" value="Borrar" onclick="">
-            </div>
-          </div>
-      </div>
-    </div>
--->
