--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <link rel="stylesheet" href="css/w3.css">
     <link rel="stylesheet" href="css/style.css">
@@ -12,47 +13,55 @@
     <div th:fragment="navBar (nombrePagina)">
         <div class="title" style="padding-left: 0!important;">
             <div class="brand"><b style="margin-left: 1%;">INFLUENCING</b></div>
-            <div style="color: white;font-size: larger;margin: auto;text-align: center;"><b><span th:text="${nombrePagina}">nombrePagina</span></b></div>
+            <div style="color: white;font-size: larger;margin: auto;text-align: center;"><b><span
+                        th:text="${nombrePagina}">nombrePagina</span></b></div>
         </div>
         <br>
-        <div class="horizontalBar">
+        <div class="horizontalBar" style="text-align: left; display:inline-block;">
             <ul class="ulFragment">
                 <li><a th:href="@{/perfiles}"><i class="fa fa-search" aria-hidden="true"></i> Búsqueda de
                         perfiles</a></li>
-                <li><a th:href="@{/negociacion}"><i class="fa fa-comment-o" aria-hidden="true"></i> Chat de Negociación</a>
+                <li><a th:href="@{/negociacion}"><i class="fa fa-comment" aria-hidden="true"></i> Chat de
+                        Negociación</a>
                 </li>
-                <li><a th:class="${nombrePagina}=='BUSQUEDA DE PROPUESTAS'?'active':''" th:href="@{/busquedaPropuesta}"><i class="fa fa-suitcase" aria-hidden="true"></i> Búsqueda de
+                <li><a th:class="${nombrePagina}=='BUSQUEDA DE PROPUESTAS'?'active':''"
+                        th:href="@{/busquedaPropuesta}"><i class="fa fa-suitcase" aria-hidden="true"></i> Búsqueda de
                         Propuestas</a></li>
-                <li><a th:href="@{/contrataciones}"><i class="fa fa-file-text" aria-hidden="true"></i> Contrataciones</a>
+                <li><a th:href="@{/contrataciones}"><i class="fa fa-file-contract" aria-hidden="true"></i>
+                        Contrataciones</a>
                 </li>
             </ul>
         </div>
-    </div> 
+    </div>
 
     <!-- MODALBAR -->
-    <div th:fragment="modalBar (nombrePagina)"  id="modalBar" class="title" style="padding-left: 0!important;">
+    <div th:fragment="modalBar (nombrePagina)" id="modalBar" class="title" style="padding-left: 0!important;">
         <div id="volver" class="w3-button" onclick="document.getElementById('id01').style.display='none'">
-             <div class="w3-padding w3  w3-text-white"><i class="fa fa-arrow-left"  ></i> VOLVER</div>
+            <div class="w3-padding w3  w3-text-white"><i class="fa fa-arrow-left"></i> VOLVER</div>
         </div>
         <div id="nombrePagina" style="color: white;font-size: larger;text-align: center;">
-        	 <b><span th:text="${nombrePagina}">nombrePagina</span></b>
-        </div>    
+            <b><span th:text="${nombrePagina}">nombrePagina</span></b>
+        </div>
     </div> <!-- CAMBIAR, DEBE IR EN EL CSS -->
-    
+
     <!-- TAGBAR -->
     <div th:fragment="tagBar">
         <div class="w3-section w3-bottombar wFilter3-padding-16 tagsList">
             <span class="w3-margin-right">Trending topics:</span>
             <button class="w3-button w3-blue tagFilterSelected">ALL</button>
             <button class="w3-button w3-white tagFilter"><i class="fa fa-diamond w3-margin-right"></i>Moda</button>
-            <button class="w3-button w3-white w3-hide-small tagFilter"><i class="fa fa-gamepad w3-margin-right"></i>Videojuegos</button>
-            <button class="w3-button w3-white w3-hide-small tagFilter"><i class="fa fa-globe w3-margin-right"></i>Viajes</button>
-            <button class="w3-button w3-white w3-hide-small tagFilter"><i class="fa fa-leaf w3-margin-right"></i>Naturaleza</button>
-            <button class="w3-button w3-white w3-hide-small tagFilter"><i class="fa fa-music w3-margin-right"></i>Música</button>
+            <button class="w3-button w3-white w3-hide-small tagFilter"><i
+                    class="fa fa-gamepad w3-margin-right"></i>Videojuegos</button>
+            <button class="w3-button w3-white w3-hide-small tagFilter"><i
+                    class="fa fa-globe w3-margin-right"></i>Viajes</button>
+            <button class="w3-button w3-white w3-hide-small tagFilter"><i
+                    class="fa fa-leaf w3-margin-right"></i>Naturaleza</button>
+            <button class="w3-button w3-white w3-hide-small tagFilter"><i
+                    class="fa fa-music w3-margin-right"></i>Música</button>
             <input type="text" placeholder="Search..">
         </div>
-    </div> 
-</head>
+    </div>
+    </head>
 
     <!-- FOOTER -->
     <footer class="w3-container w3-padding-32 w3-dark-grey" th:fragment="footer">
