--- a/src/main/resources/templates/negociacion.html
+++ b/src/main/resources/templates/negociacion.html
@@ -7,6 +7,7 @@
     <link href="css/negociacion.css" rel="stylesheet">
     <script src="js/negociacion.js" type="text/javascript"></script>
     <script src="js/cargaPropuesta.js" type="text/javascript"></script>
+    <title>Influencing: Negociación</title>
 </head>
 
 <body class="general">
@@ -19,12 +20,15 @@
         <div class="contenido">
 
             <div class="lista" >
-                <div class="propuesta" id="th:text="${candidatura.id}"" th:each="candidatura: ${candidaturas}" onclick="cargaChat()">
+                <div class="propuesta" 
+                    th:each="c: ${candidaturas}"
+                    th:attr="data-id=${c.id},data-nombre=${c.propuesta.nombre},data-otro=${session.u.hasRole('EMPRESA')?c.candidato.nombre:c.propuesta.empresa.nombre}" 
+                    >
                     <a href="">
                         <img width="50" height="50" src="img/perfilIcon.svg">
                     </a>
-                    <span th:text="${candidatura.propuesta.nombre}"> Nombre de la propuesta</span>
-                </div>
+                    <span th:text="${c.propuesta.nombre}"> Nombre de la propuesta</span>
+				</div>
             </div>
 
             <div class="chat" id="chat">
@@ -40,29 +44,7 @@
 				<div id="contenidoChat"></div>
 				<table class="datatable" id="datatable">
 				</table>
-				<!--
-                <p class="mensaje recibido">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
-                    vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt
-                    id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam
-                    nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna.
 
-                </p>
-                <p class="mensaje enviado">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
-                    vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt
-                    id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam
-                    nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna.
-                </p>
-				<p class="mensaje recibido">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
-                    vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt
-                    id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam
-                    nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna.
-
-                </p>
-                <p class="mensaje enviado">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
-                    vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt
-                    id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam
-                    nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna.
-                </p>-->
 
                 <input id="botonEnviar" type="text" placeholder="Introduzca su mensaje...">
 
