--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -17,7 +17,7 @@
                         th:text="${nombrePagina}">nombrePagina</span></b></div>
         </div>
         <br>
-        <div class="horizontalBar" style="text-align: left; display:inline-block;">
+        <div class="horizontalBar" style="text-align: left;">
             <ul class="ulFragment">
                 <li><a th:href="@{/perfiles}"><i class="fa fa-search" aria-hidden="true"></i> Búsqueda de
                         perfiles</a></li>
