Cambios en la estructura, metiendo modals en carpeta, poniendo titles a las paginas y haciendo que el brand te lleve a Inicio

--- a/src/main/resources/templates/busquedaPerfil.html
+++ b/src/main/resources/templates/busquedaPerfil.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-	<th:block th:replace="fragments/head.html :: header"/>
+	<th:block th:replace="fragments/head.html :: header" />
 	<link rel="stylesheet" type="text/css" href="css/busquedaPerfil.css" />
+	<title>Influencing: Búsqueda de Perfiles</title>
 </head>
 
 <body style="width:100%" class="general">
