--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -4,7 +4,7 @@
 <head>
     <th:block th:replace="fragments/head.html :: header"/>
     <link rel="stylesheet" href="css/inicio.css">
-
+	<title>Influencing: Negociación</title>
 </head>
 
 <!-- Header -->
