--- a/src/main/resources/templates/administracion.html
+++ b/src/main/resources/templates/administracion.html
@@ -77,7 +77,7 @@
         <div id="id01" class="w3-modal">
             <div class="w3-modal-content">
 
-                <div th:replace="notificaciones.html :: notificaciones(notificaciones=${notificaciones})"></div>
+                <div th:replace="modals/notificaciones.html :: notificaciones(notificaciones=${notificaciones})"></div>
             </div>
         </div>
     </main>
