--- a/src/main/resources/templates/negociacion.html
+++ b/src/main/resources/templates/negociacion.html
@@ -6,7 +6,7 @@
     <link href="css/negociacion.css" rel="stylesheet">
     <script src="js/negociacion.js" type="text/javascript"></script>
     <script src="js/cargaPropuesta.js" type="text/javascript"></script>
-    <title>Influencing: Negociación</title>
+    <title>Influencing: Chat de Negociación</title>
 </head>
 
 <body class="general">
