--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,31 +1,4 @@
-.general{
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-}
-
-.h1{
-    color: #000000;
-    font-weight: normal;
-    font-size: 40px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-transform: uppercase;
-}
-
-.h2{
-    color: #000000;
-    font-size: 35px;
-    font-weight: normal;
-    font-family: Arial, Helvetica, sans-serif;
-    text-transform: uppercase;
-}
-
-.h3{
-    color: #000000;
-    font-size: 30px;
-    font-weight: normal;
-    font-family: Arial, Helvetica, sans-serif;
-    text-transform: uppercase;
-}
+body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
 .header-config{
     background-color: #6ed1dd;                             /*Color que está en los moqups*/
