--- a/src/main/resources/templates/contrataciones.html
+++ b/src/main/resources/templates/contrataciones.html
@@ -19,10 +19,10 @@
 
 		<!-- !PAGE CONTENT! -->
 		<div>
-			<h1 style="margin: 2%;">Contrataciones en vigor</h1>
+			<h2 style="margin: 2%;">Contrataciones en vigor</h2>
 			<div th:each="c: ${candidaturasEnVigor}" class="w3-row-padding">
 				<div style="display:block;">
-					<div class="w3-third w3-container w3-margin-bottom box">
+					<div class="w3-third w3-container w3-margin-bottom box" style="width: 97%">
 						<div class="firstCol">
 							<div class="w3-third w3-container fecha">
 								<p>Fecha inicio - Fecha fin</p>
@@ -67,11 +67,11 @@
 
 			</div>
 
-			<h1 style="margin: 2%;">Contrataciones pendientes de valorar</h1>
+			<h2 style="margin: 2%;">Contrataciones pendientes de valorar</h2>
 
 			<div th:each="c: ${candidaturasPendientes}" class="w3-row-padding">
 				<div style="display:block;">
-					<div class="w3-third w3-container w3-margin-bottom box">
+					<div class="w3-third w3-container w3-margin-bottom box" style="width: 97%">
 						<div class="firstCol">
 							<div class="w3-third w3-container fecha">
 								<p>Fecha inicio - Fecha fin</p>
