--- a/src/main/resources/templates/modals/notificaciones.html
+++ b/src/main/resources/templates/modals/notificaciones.html
@@ -30,7 +30,7 @@
           </div>
 
           <div class="w3-container w3-pale-blue w3-center">
-            <p th:text="${notificacion.fecha}">Aqui va la fecha</p>
+            <p th:text="${notificacion.fechaEnviado}">Aqui va la fecha</p>
           </div>
         </div>
 
