--- a/src/main/resources/templates/modals/propuesta.html
+++ b/src/main/resources/templates/modals/propuesta.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
-<div th:fragment="propuesta (propuestas)">
 
   <head>
     <th:block th:replace="fragments/head.html :: header" />
-    <link href="css/propuesta.css" rel="stylesheet" />
   </head>
 
   <body style="width:100%" class="general">
@@ -18,10 +16,10 @@
       </header>
 
       <!-- First Field Grid-->
-      <div class="contenido">
+      <div class="contenido-propuesta">
         <div class="texto-propuesta">
-          <h2>Nombre de propuesta</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec,
+          <h2 th:text="${propuesta.nombre}">Nombre de propuesta</h2>
+          <p th:text="${propuesta.descripcion}">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec,
             mattis ac
             neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend
             tristique,
@@ -77,6 +75,5 @@
 
 
   </body>
-</div>
 
 </html>
