--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -32,7 +32,7 @@
         <br>
         <div class="horizontalBar" style="text-align: left;">
             <ul class="ulFragment">
-                <li><a th:href="@{/perfiles}"><i class="fa fa-search" aria-hidden="true"></i> Búsqueda de
+                <li><a th:href="@{/busquedaPerfil}"><i class="fa fa-search" aria-hidden="true"></i> Búsqueda de
                         Perfiles</a></li>
                 <li><a th:class="${nombrePagina}=='BUSQUEDA DE PROPUESTAS'?'active':''"
                         th:href="@{/busquedaPropuesta}"><i class="fa fa-suitcase" aria-hidden="true"></i> Búsqueda de
