--- a/src/main/resources/templates/negociacion.html
+++ b/src/main/resources/templates/negociacion.html
@@ -30,8 +30,8 @@
             <div class="chat" id="chat">
                 <div class="barraChat">
                     <div class="informacionChat">
-                        <a href="" class="perfil">Perfil de la empresa/influencer</a>
-                        <a href="" class="nombre">Zapatillas</a>
+                        <a href="" class="perfil"></a>
+                        <a href="" class="nombre"></a>
                     </div>
                     <div class="ultimatum">
                         <span class="boton" id="botonUltimatum">Enviar Ultimatum</span>
